2012-06-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (column-name): Rename asc and desc in filter to sort
	and sort-reverse.

2012-06-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Allow newlines in preference:value, because
	the value could be a file.

2012-06-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsa-style.css (.gbntablehead2 a): New rules.

	* src/html/omp.xsl (column-name): New template.
	(html-targets-table): Make column headings sorting links.

2012-06-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (edit_task): Check if commands are enabled before using.

2012-06-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_target_omp): Only check port when SSH credential
	is given.

2012-06-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-target-form): If the port is empty make is
	22.

2012-06-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-detailed): Add References for second result in
	delta "changed" case.

2012-06-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Match PDF report for Download
	column by name instead of ID, because the ID changes.

2012-06-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_oap.c (xsl_transform_omp): Add capabilities.

2012-06-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl: Add a show_closed_cves param everywhere that there is
	a autofp param.

	* src/gsad_omp.c (get_result): Add autofp arg.
	(get_result_omp): Pass show_closed_cves param to get_result.
	(new_note_omp, create_note_omp, delete_note_omp, edit_note_omp)
	(save_note_omp, new_override_omp, create_override_omp)
	(delete_override_omp, edit_override_omp, save_override_omp): Add
	show_closed_cves params alongside autofp params.
