@@ -45,6 +45,30 @@ a:hover, a:focus {
  text-decoration: underline;
 }
 
+.footnote {
+ font-size:10px;
+ color: #787878;
+ text-align:left;
+}
+
+.footnote a {
+ font-size:10px;
+ color: #787878;
+ text-decoration: none;
+}
+
+.footnote a:hover {
+ font-size:10px;
+ color: #787878;
+ text-decoration: underline;
+}
+
+.footnote a:focus {
+ font-size:10px;
+ color: #787878;
+ text-decoration: underline;
+}
+
 img {
  border: 0px;
 }
